# nanos-cluster-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  macros.h  macros.hpp  nanos6.toml
cholesky_fare_ompss2/: CMakeLists.txt  cholesky_fare.h  cholesky_fare_memory_ompss2.c  cholesky_fare_ompss2.c  cholesky_fare_ompss2.h  cholesky_fare_ompss2_taskfor.c  cholesky_fare_ompss2_taskfor.h  cholesky_fare_resize.c  cholesky_fare_taskfor_ompss2.c  cholesky_memory_ompss2.c
cholesky_ompss2/: CMakeLists.txt  cholesky_utils.c  cholesky_utils.h  cholesky_weak.c
cmake/: FindExtrae.cmake  FindLIBEREP.cmake  FindMCC.cmake  FindMERCURIUM.cmake  FindNuma.cmake
jacobi_ompss2/: CMakeLists.txt  jacobi.c  jacobi.h  jacobi_base.c  jacobi_ompss2.c  jacobi_ompss2.h  jacobi_serial.c  jacobi_task_ompss2.c  jacobi_taskfor_ompss2.c  submiter_mn.sh
matmul_matvec_ompss2/: CMakeLists.txt  extrae_template.xml  main_ompss2.c  main_resize.c  matmul_ompss2.c  matmul_ompss2.h  matvec.c  matvec.h  process.py  submit_mn.sh  submiter_mn.sh  trace.sh
matvec/: CMakeLists.txt  extrae_template.xml  matvec.h  matvec_strong.cpp  matvec_weak.cpp  submit_mn.sh  submiter_mn.sh  trace.sh  validate.py
matvec_ompss2/: CMakeLists.txt  matvec.c  matvec.h  matvec_strong.cpp  matvec_weak.cpp
utils/: argparse.sh  benchmarks_ompss.h  counter.py  graph.py  graph_dim.py  graph_dim2.py  interactive_dim.sh  process.py  process_dim.py  submit_dim.sh  submit_extrae.sh  submit_mn.sh  submit_resize.sh  submiter_dim.sh  submiter_mn.sh  submiter_resize.sh  submitter_dim.sh  submitter_resize.sh  trace.sh
utils/cmacros/: Readme.md  macros.h
